--- a/src/Identity/HealthMonitoring.Identity.Application/HealthMonitoring.Identity.Application.csproj
+++ b/src/Identity/HealthMonitoring.Identity.Application/HealthMonitoring.Identity.Application.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="FluentValidation" Version="12.0.0" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
     <PackageReference Include="MediatR" Version="12.5.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.4" />
   </ItemGroup>
 
   <PropertyGroup>
