--- a/src/Identity/HealthMonitoring.Identity.API/appsettings.json
+++ b/src/Identity/HealthMonitoring.Identity.API/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "IdentityDatabase": "Host=localhost;Database=healthmonitoring;Username=healthmonitoring;Password=P@ssw0rd"
+    "IdentityDatabase": "Host=localhost;Database=healthmonitoring;Username=healthmonitoring;Password=P@ssw0rd;SslMode=Prefer;Include Error Detail=true;Password Encryption=ScramSha256"
   },
   "JwtSettings": {
     "Key": "YourSuperSecretKeyHereItShouldBeAtLeast32CharactersLong",
@@ -16,9 +16,9 @@
     "ExpiresMinutes": 60
   },
   "MessageBus": {
-    "Host": "localhost",
-    "Username": "healthmonitoring",
-    "Password": "P@ssw0rd",
-    "VirtualHost": "/"
-  }
+  "Host": "localhost",
+  "Username": "healthmonitoring",
+  "Password": "P@ssw0rd",
+  "VirtualHost": "/"
+}
 }
