--- a/src/Identity/HealthMonitoring.Identity.API/appsettings.Development.json
+++ b/src/Identity/HealthMonitoring.Identity.API/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "IdentityDatabase": "Host=localhost;Database=healthmonitoring;Username=healthmonitoring;Password=P@ssw0rd"
+    "IdentityDatabase": "Host=localhost;Port=5432;Database=identity;Username=healthmonitoring;Password=P@ssw0rd"
   }
 }
