--- a/src/Organisation/HealthMonitoring.Organisation/appsettings.Development.json
+++ b/src/Organisation/HealthMonitoring.Organisation/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "OrganisationDatabase": "Host=localhost;Port=5433;Database=organisation;Username=healthmonitoring;Password=P@ssw0rd"
   }
 }
