--- a/src/Organisation/HealthMonitoring.Organisation/appsettings.json
+++ b/src/Organisation/HealthMonitoring.Organisation/appsettings.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-  "OrganisationDatabase": "Host=localhost;Database=healthmonitoring;Username=healthmonitoring;Password=P@ssw0rd"
-},
+    "OrganisationDatabase": "Host=localhost;Port=5433;Database=organisation;Username=healthmonitoring;Password=P@ssw0rd"
+  },
   "JwtSettings": {
     "Key": "YourSuperSecretKeyHereItShouldBeAtLeast32CharactersLong",
     "Issuer": "HealthMonitoring.Identity",
