--- a/src/Patient/HealthMonitoring.Patient/appsettings.Development.json
+++ b/src/Patient/HealthMonitoring.Patient/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "PatientDatabase": "Host=localhost;Port=5434;Database=patient;Username=healthmonitoring;Password=P@ssw0rd"
   }
 }
