--- a/src/Patient/HealthMonitoring.Patient/appsettings.json
+++ b/src/Patient/HealthMonitoring.Patient/appsettings.json
@@ -1,3 +1,4 @@
+
 {
   "Logging": {
     "LogLevel": {
@@ -5,5 +6,20 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "PatientDatabase": "Host=localhost;Port=5434;Database=patient;Username=healthmonitoring;Password=P@ssw0rd"
+  },
+  "JwtSettings": {
+    "Key": "YourSuperSecretKeyHereItShouldBeAtLeast32CharactersLong",
+    "Issuer": "HealthMonitoring.Identity",
+    "Audience": "HealthMonitoring",
+    "ExpiresMinutes": 60
+  },
+  "MessageBus": {
+    "Host": "localhost",
+    "Username": "healthmonitoring",
+    "Password": "P@ssw0rd",
+    "VirtualHost": "/"
+  }
 }
