--- a/src/ApiGateway/HealthMonitoring.ApiGateway/appsettings.json
+++ b/src/ApiGateway/HealthMonitoring.ApiGateway/appsettings.json
@@ -19,6 +19,42 @@
     "Device": "http://localhost:5200",
     "Vital": "http://localhost:5100"
   },
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information",
+        "Microsoft.AspNetCore": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] {Message:lj} {Properties:j}{NewLine}{Exception}"
+        }
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "logs/api-gateway-.log",
+          "rollingInterval": "Day",
+          "outputTemplate": "[{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} {Level:u3}] {Message:lj} {Properties:j}{NewLine}{Exception}"
+        }
+      }
+    ],
+    "Enrich": [
+      "FromLogContext",
+      "WithMachineName",
+      "WithThreadId",
+      "WithExceptionDetails"
+    ],
+    "Properties": {
+      "Environment": "Development"
+    }
+  },
   "ReverseProxy": {
     "Routes": {
       "identity-route": {
