--- a/src/Patient/HealthMonitoring.Patient/appsettings.json
+++ b/src/Patient/HealthMonitoring.Patient/appsettings.json
@@ -21,5 +21,47 @@
     "Username": "healthmonitoring",
     "Password": "P@ssw0rd",
     "VirtualHost": "/"
+  },
+  "Serilog": {
+  "MinimumLevel": {
+    "Default": "Information",
+    "Override": {
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information",
+      "Microsoft.AspNetCore": "Warning",
+      "System": "Warning"
+    }
+  },
+  "WriteTo": [
+    {
+      "Name": "Console",
+      "Args": {
+        "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] {Message:lj} {Properties:j}{NewLine}{Exception}"
+      }
+    },
+    {
+      "Name": "File",
+      "Args": {
+        "path": "logs/health-monitoring-.log",
+        "rollingInterval": "Day",
+        "outputTemplate": "[{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} {Level:u3}] {Message:lj} {Properties:j}{NewLine}{Exception}"
+      }
+    },
+    {
+      "Name": "Seq",
+      "Args": {
+        "serverUrl": "http://localhost:5341"
+      }
+    }
+  ],
+  "Enrich": [
+    "FromLogContext",
+    "WithMachineName",
+    "WithThreadId",
+    "WithExceptionDetails"
+  ],
+  "Properties": {
+    "Environment": "Development"
   }
+}
 }
